Dao häbt Klammern nao dän fransöösken Naomen failet

--- a/Algerye.mw
+++ b/Algerye.mw
@@ -1,8 +1,8 @@
 {{Laandtabel-twd
-| naaminlaandssproak = Demokratiske Volksrepublik Algerye</br>
-الجمهورية الجزائرية الديمقراطية الشعبية ([[arabisk]])</br>
-al-Jumhūriyya al-Jazāʾiriyya ad-Dīmuqrāṭiyya aš-Šaʿbiyya</br>
-République algérienne démocratique et populaire  ([[Fraans|fransk)
+| naaminlaandssproak = Demokratiske Volksrepublik Algerye<br>
+الجمهورية الجزائرية الديمقراطية الشعبية ([[arabisk]])<br>
+al-Jumhūriyya al-Jazāʾiriyya ad-Dīmuqrāṭiyya aš-Šaʿbiyya<br>
+République algérienne démocratique et populaire  ([[Fraans|fransk)]]
 | vlagge =  Flag_of_Algeria.svg
 | vlagartikel = Vlagge van Algerye
 | woapn = Emblem_of_Algeria.svg
@@ -22,7 +22,7 @@ République algérienne démocratique et populaire  ([[Fraans|fransk)
 | tiedzone = UTC+1 (CET))
 | volksleed = [[Kassaman]] ("Wy sweyret")
 | feestdag =
-| tld = dz</br>الجزائر. | laandkode = DZ | tel = 213 
+| tld = dz<br>الجزائر. | laandkode = DZ | tel = 213 
 |}}
 
 '''Algerye''', officieel de '''Demokratiske Volksrepublik Algerye''' is en land in de [[Maghreb]]-streake van [[Afrika|Noordafrika]]. Wat uppervlak angeyt is et et gröätste land van Afrika en de arabiske wearld. Et grenset in et noordousten an [[Tunesie]], up et ousten an [[Libie]], up et süüdousten an [[Niger]], up et süüdwesten an [[Mali]], [[Mauritanie]] en de [[Westelike Sahara]], up et westen an [[Marokko]] en up et noorden an de [[Middellandse Zee|Middellandsken Sey]]. Et land is halvverdröygd. Et meyste volk woant in et vrüchtbåre noorden. Et süden van et land ligt vöär en grout deyl in de [[Sahara]]. In Algerye woanet 44 miljoon lüde up ne uppervlakde van 2.381.741 kilometer in et veerkant. De gröätste stad is höyvdstad [[Algiers]], wat by de middellandske sey an de küste ligt.
