--- a/Algerye.mw
+++ b/Algerye.mw
@@ -18,18 +18,20 @@ République algérienne démocratique et populaire  ([[Fraans|fransk)]]
 | lengtegroad = 3/13//E
 | region = DZ
 | pctwater = 1,1
-| munteenheid = [[Algerynsken dinar]] | valutakode = (DZD)
+| munteenheid = [[algerynsken dinar]] | valutakode = (DZD)
 | tiedzone = UTC+1 (CET))
-| volksleed = [[Kassaman]] ("Wy sweyret")
+| volksleed = [[Kassaman]] ("Wy swearet")
 | feestdag =
 | tld = dz<br>الجزائر. | laandkode = DZ | tel = 213 
 |}}
 
-'''Algerye''', officieel de '''Demokratiske Volksrepublik Algerye''' is en land in de [[Maghreb]]-streake van [[Afrika|Noordafrika]]. Wat uppervlak angeyt is et et gröätste land van Afrika en de arabiske wearld. Et grenset in et noordousten an [[Tunesie]], up et ousten an [[Libie]], up et süüdousten an [[Niger]], up et süüdwesten an [[Mali]], [[Mauritanie]] en de [[Westelike Sahara]], up et westen an [[Marokko]] en up et noorden an de [[Middellaanse Zee|Middellandsken Sey]]. Et land is halvverdröygd. Et meyste volk woant in et vrüchtbåre noorden. Et süden van et land ligt vöär en grout deyl in de [[Sahara]]. In Algerye woanet 44 miljoon lüde up ne uppervlakde van 2.381.741 kilometer in et veerkant. De gröätste stad is höyvdstad [[Algiers]], wat by de middellandske sey an de küste ligt.
+'''Algerye''', officieel de '''Demokratiske Volksrepublik Algerye''' is en land in de [[Maghreb]]-streake van [[Afrika|Noordafrika]]. Wat uppervlak angeyt is et et gröytste land van Afrika en de arabiske wearld. Et grenst in et noordousten an [[Tunesie]], up et ousten an [[Libie]], up et süüdousten an [[Niger]], up et süüdwesten an [[Mali]], [[Mauritanie]] en de [[Westelike Sahara]], up et westen an [[Marokko]] en up et noorden an de [[Middellaanse Zee|Middellandsken sey]]. Et land is halvverdröygd. Et meyste volk woant in et vrüchtbåre noorden. Et süden van et land ligt vöär en grout deyl in de [[Sahara]]. In Algerye woanet 44 miljoon lüde up ne uppervlakde van 2.381.741 kilometer in et veerkant. De gröätste stad is höyvdstad [[Algiers]], wat by de Middellandsken sey an de küste ligt.
 
-Vöär 1962 was Algerye et land van vöäle keiserryken en heyrskers, wåründer de [[numidianen]]. [[feniciers]], [[kartagenen]], [[Romeinse Riek|romeinen]], [[vandalen]], [[Bysantynske Ryk|bysantynen]], [[umayyaden]], [[abbasiden]], [[rustamiden]], [[idrisiden]], [[aghlabiden]], [[fatimiden]], [[ziriden]], [[hammadiden]], [[almoraviden]], [[almohaden]], [[zayyaniden]], [[Spanje|spanjaarden]], [[Ottomaanske Ryk|ottomanen]] en uuteandelik et [[Frankryk|franske koloniale ryk]]. et grötste deyl van de inwoaners is [[berber (volk)|berber]] en [[islam|islamitisk]]. De officiele språken van et land sind [[arabisk]] en [[berber (språke)|berber]]. In administrative saken en underwys is et [[Fraans|fransk]] in bruuk. De meystspröäkene språke is [[Algerynsk arabisk]].
+Vöär 1962 was Algerye et land van vöäle keiserryken en heyrskers, wåründer de [[numidianen]]. [[feniciers]], [[kartagenen]], [[Romeinse Riek|romeinen]], [[vandalen]], [[Bysantynske Ryk|bysantynen]], [[umayyaden]], [[abbasiden]], [[rustamiden]], [[idrisiden]], [[aghlabiden]], [[fatimiden]], [[ziriden]], [[hammadiden]], [[almoraviden]], [[almohaden]], [[zayyaniden]], [[Spanje|spanjaarden]], [[Ottomaanske Ryk|ottomanen]] en uutendelik et [[Frankryk|franske koloniale ryk]]. Et grötste deyl van de inwoaners is [[berber (volk)|berber]] en [[islam|islamitisk]]. De officiele språken van et land sint [[arabisk]] en [[berber (språke)|berber]]. In administrative saken en underwys is et [[Fraans|fransk]] in bruuk. De meystspröäkene språke is [[algerynsk arabisk]].
 
-Algerye is ne halv-presidentiele [[republik]]. Der sint 58 provincys en 1541 gemeynskappen. In Noordafrika is Algerye nen groutmacht, up et wearldtoneel van döärsneyde bedüding. Et hevt de höygste Menskelike UntwikkelingsIndex van alle kontinentaal-afrikaanske landen en eyne van de grötste [[ekonomie]]n van et wearlddeyl, vöär et grötste deyl te danken an energyuutvoor. Up vyvteen landen nå hevt Algerye de grötste öälyvöärråden van de wearld en de neagendegrötste natuurlike gasbel van de wearld. Sonatrach, et nationale öälybedryv, is et gröätste bedryv van Afrika. See leyvert groute gasvöärråden an [[Europa (wearlddeel)|Europa]]. Algerye hevt eyne van de gröätste leygers in Afrikae en et gröätste defensybudget up et wearlddeyl. Et is lid van de [[Afrikaanske Uny]], de [[Arabiske Liga]], [[OPEC]], de [[Vereynigde Natys]]. Et is meduprichter van de arabiske Maghreb-uny.
+Algerye is ne halv-presidentiele [[republik]]. Der sint 58 provinsys en 1541 gemeynskappen. In Noordafrika is Algerye nen groutmacht, up et wearldteneyl van döärsneade bedüding. Et hevt de höygste Menskelike UntwikkelingsIndex van alle kontinentaal-afrikaanske landen en eyne van de grötste [[ekonomie|ekonomyen]] van et wearlddeyl, vöär et grötste deyl te danken an energyuutvoor. Up vyvteen landen nå hevt Algerye de grötste öälyvöärråden van de wearld en de neagendegrötste natuurlike gasbel van de wearld. Sonatrach, et nationale öälybedryv, is et gröytste bedryv van Afrika. See leyveret groute gasvöärråden an [[Europa (wearlddeel)|Europa]]. Algerye hevt eyne van de gröytste leagers in Afrika en et gröytste defensybudget up et wearlddeyl. Et is lid van de [[Afrikaanske Uny]], de [[Arabiske Liga]], [[OPEC]], de [[Vereynigde Natys]]. Et is meduprichter van de arabiske Maghreb-uny.
+
+{{Dialekt|twd||Nysassiske Skryvwyse}}
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
