*Empty MediaWiki Message*

--- a/Algerye.mw
+++ b/Algerye.mw
@@ -35,4 +35,4 @@ Algerye is ne halv-presidentiele [[republik]]. Der sint 58 provinsys en 1541 gem
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
-[[Kategorie: Land]]
+[[Kategorie: Laand]]
