*Empty MediaWiki Message*

--- a/Djibuti.mw
+++ b/Djibuti.mw
@@ -28,7 +28,7 @@ In de [[19e eeuw|19e eyw]] stichteden [[Frankriek|Frankryk]] en protektoraat in 
 En vreadesakkoord üüt [[2001]] makeden en ende an en teen jår dürende upstand döär afar-rebellen.
 
 == Geografy ==
-[[Bestaand:DjiboutiLacAssal2.jpg|links|duum|300x300px|Et [[Assalmear]]]]
+[[Bestaand:DjiboutiLacAssal2.jpg|left|duum|Et [[Assalmear]]]]
 Djibuti ligt in et noordousten van Afrika an de [[Golf van Aden|Golve van Aden]] an et begin van de südelike ingang van de [[Roude Sey]]. De küststroak van Djibuti is 113 km lang, de grens mid [[Eritrea]] 109 km, mid [[Etiopie]] 349 km en mid [[Somalie]] 58 km.
 
 Et land besteyt groutendeyls üüt steynige [[Weuste|wööstden]], mid verspreide vlakten en houglanden. Et land besteyt vöär 90% üüt wööstden en hevt geen permanente rivyren, vöärnamelik soltmearen dee deyl üütmaken van et wööstdelandskap.
