--- a/Algerye.mw
+++ b/Algerye.mw
@@ -1,13 +1,10 @@
 {{Laandtabel-twd
-| naaminlaandssproak = Demokratiske Volksrepublik Algerye<br>
-الجمهورية الجزائرية الديمقراطية الشعبية ([[arabisk]])<br>
-al-Jumhūriyya al-Jazāʾiriyya ad-Dīmuqrāṭiyya aš-Šaʿbiyya<br>
-République algérienne démocratique et populaire  ([[Fraans|fransk)]]
-| vlagge =  Flag_of_Algeria.svg
+| naaminlaandssproak = Demokratiske Volksrepublik Algerye<br>الجمهورية الجزائرية الديمقراطية الشعبية ([[arabisk]])<br>al-Jumhūriyya al-Jazāʾiriyya ad-Dīmuqrāṭiyya aš-Šaʿbiyya<br>République algérienne démocratique et populaire  ([[Fraans|fransk)]]
+| vlagge =  Flag of Algeria.svg
 | vlagartikel = Vlagge van Algerye
-| woapn = Emblem_of_Algeria.svg
+| woapn = Emblem of Algeria.svg
 | woapnartikel = 
-| lokasie = Algeria_%28centered_orthographic_projection%29.svg
+| lokasie = Algeria (centered orthographic projection).svg
 | sproaken = [[arabisk]] (officieel), [[berber]] (officieel), [[fraans|fransk]]
 | heufdstad = [[Algiers]]
 | geleuf = [[islam]]
@@ -25,7 +22,7 @@ République algérienne démocratique et populaire  ([[Fraans|fransk)]]
 | tld = dz<br>الجزائر. | laandkode = DZ | tel = 213 
 |}}
 
-'''Algerye''', officieel de '''Demokratiske Volksrepublik Algerye''' is en land in de [[Maghreb]]-streake van [[Afrika|Noordafrika]]. Wat uppervlak angeyt is et et gröytste land van Afrika en de arabiske wearld. Et grenst in et noordousten an [[Tunesie]], up et ousten an [[Libie]], up et süüdousten an [[Niger]], up et süüdwesten an [[Mali]], [[Mauritanie]] en de [[Westelike Sahara]], up et westen an [[Marokko]] en up et noorden an de [[Middellaanse Zee|Middellandsken sey]]. Et land is halvverdröygd. Et meyste volk woant in et vrüchtbåre noorden. Et süden van et land ligt vöär en grout deyl in de [[Sahara]]. In Algerye woanet 44 miljoon lüde up ne uppervlakde van 2.381.741 kilometer in et veerkant. De gröätste stad is höyvdstad [[Algiers]], wat by de Middellandsken sey an de küste ligt.
+'''Algerye''', officieel de '''Demokratiske Volksrepublik Algerye''' is en land in de [[Maghreb]]-streake van [[Afrika|Noordafrika]]. Wat uppervlak angeyt is et et gröytste land van Afrika en de arabiske wearld. Et grenst in et noordousten an [[Tunesie]], up et ousten an [[Libie]], up et süüdousten an [[Niger (laand)|Niger]], up et süüdwesten an [[Mali]], [[Mauritanie]] en de [[Westelike Sahara]], up et westen an [[Marokko]] en up et noorden an de [[Middellaanse Zee|Middellandsken sey]]. Et land is halvverdröygd. Et meyste volk woant in et vrüchtbåre noorden. Et süden van et land ligt vöär en grout deyl in de [[Sahara]]. In Algerye woanet 44 miljoon lüde up ne uppervlakde van 2.381.741 kilometer in et veerkant. De gröätste stad is höyvdstad [[Algiers]], wat by de Middellandsken sey an de küste ligt.
 
 Vöär 1962 was Algerye et land van vöäle keiserryken en heyrskers, wåründer de [[numidianen]]. [[feniciers]], [[kartagenen]], [[Romeinse Riek|romeinen]], [[vandalen]], [[Bysantynske Ryk|bysantynen]], [[umayyaden]], [[abbasiden]], [[rustamiden]], [[idrisiden]], [[aghlabiden]], [[fatimiden]], [[ziriden]], [[hammadiden]], [[almoraviden]], [[almohaden]], [[zayyaniden]], [[Spanje|spanjaarden]], [[Ottomaanske Ryk|ottomanen]] en uutendelik et [[Frankryk|franske koloniale ryk]]. Et grötste deyl van de inwoaners is [[berber (volk)|berber]] en [[islam|islamitisk]]. De officiele språken van et land sint [[arabisk]] en [[berber (språke)|berber]]. In administrative saken en underwys is et [[Fraans|fransk]] in bruuk. De meystspröäkene språke is [[algerynsk arabisk]].
 
