--- a/Nedersaksisch_F.mw
+++ b/Nedersaksisch_F.mw
@@ -115,7 +115,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit F begunt''' oet 't [[Neders
 ** ''Freeislaand'' (spelling [[Noordenvelds|NVL]])
 ** ''Freislaand'' ([[Westerwoolds|WEV]])
 ** ''Friesland'' ([[Westerkertiers|WEK]]; ie laank oetsproken)
-*[[Sallaans]]: ''Frieslaand
+*[[Sallaans]]: ''Frieslaand''
 *[[Stellingwarfs]]: ''[[Frieslaand]]''
 *[[Tweants]]: ''Freeslaand''
 *[[Urkers]]: ''Frieslaand''
@@ -127,7 +127,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit F begunt''' oet 't [[Neders
 ==Fruit==
 *[[Nederlands]]: 
 **''fruit'' (alleen als soortnaam)
-**''vruchten
+**''vruchten''
 
 *[[Achterhooks]]:
 **''gräözeri-je''
@@ -136,7 +136,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit F begunt''' oet 't [[Neders
 *[[Drèents]]: 
 *[[Grönnegs]]: ''vruchten''
 *[[Oostfreisk]]:
-**''vruchten'' (Pdt: ''Früchten)
+**''vruchten'' (Pdt: ''Früchten'')
 **''obst'' (kultiveerde boumvruchten)
 *[[Sallaans]]: ...
 *[[Stellingwarfs]]: ...
