--- a/Bruunsbarg_(Polen).mw
+++ b/Bruunsbarg_(Polen).mw
@@ -1,6 +1,6 @@
 [[Bestaand:Braniewo_-_bazylika_2.jpg|thumb|Sinte-Katarinabasilik in Bruunsbarg]]
 [[Bestaand:Braniewo_Kościuszki_108-007.JPG|thumb|En olde [[spyker]] in Bruunsbarg]]
-'''Bruunsbarg''' ([[Pools|poolsk]]: ''Braniewo'', [[Duuts|düütsk]]: ''Braunsberg'') is en [[stad]] in et [[Polen|poolske]] [[woiwodskap]] [[Armland-Mazurie]], in et gelyknamige distrikt. Vrogger behöyrde de stad tot de [[Prusen|prüüssiske]] provinsy [[Oustprüüssen]], et meyst oustelike deyl van [[Duutslaand|Düütskland]] vöär de grensveranderingen nå de [[Twiede Wereldoorlog|Tweyde Wearldoorlog]].
+'''Bruunsbarg''' ([[Pools|poolsk]]: ''Braniewo'', [[Duuts|düütsk]]: ''Braunsberg'') is en [[Stad (woonstee)|stad]] in et [[Polen|poolske]] [[woiwodskap]] [[Armland-Mazurie]], in et gelyknamige distrikt. Vrogger behöyrde de stad tot de [[Prusen|prüüssiske]] provinsy [[Oustprüüssen]], et meyst oustelike deyl van [[Duutslaand|Düütskland]] vöär de grensveranderingen nå de [[Twiede Wereldoorlog|Tweyde Wearldoorlog]].
 
 Bruunsbarg is teagenswoordig de up eyn nå groutste stad van [[Armland]], allinig [[Allensteyn]] (''Olsztyn'') is grouter. Et is ouk en belangryk historisk centrum in de regio. Bruunsbarg ligt an de de rivyr de [[Passarge|Passarge/Pasłęka]], sou'n 5 km van de [[Wysselhav]], 35 km ten noordousten van [[Elbing]] (''Elbląg'') en 55 km ten süüdousten van [[Koaningsbargen]] (''Kaliningrad''). De poolske grens mid et [[Ruslaand|russiske]] oblast Koaningsbargen ligt 6 km ten noorden, en kan vanüüt Bruunsbarg bereiked wörden via de provinsiale weg (''Droga Krajowa'') 54.
 
