*Empty MediaWiki Message*

--- a/Algerye.mw
+++ b/Algerye.mw
@@ -26,7 +26,7 @@
 
 Vöär 1962 was Algerye et land van vöäle keiserryken en heyrskers, wåründer de [[numidianen]]. [[feniciers]], [[kartagenen]], [[Romeinse Riek|romeinen]], [[vandalen]], [[Bysantynske Ryk|bysantynen]], [[umayyaden]], [[abbasiden]], [[rustamiden]], [[idrisiden]], [[aghlabiden]], [[fatimiden]], [[ziriden]], [[hammadiden]], [[almoraviden]], [[almohaden]], [[zayyaniden]], [[Spanje|spanjaarden]], [[Ottomaanske Ryk|ottomanen]] en uutendelik et [[Frankryk|franske koloniale ryk]]. Et grötste deyl van de inwoaners is [[berber (volk)|berber]] en [[islam|islamitisk]]. De officiele språken van et land sint [[arabisk]] en [[berber (språke)|berber]]. In administrative saken en underwys is et [[Fraans|fransk]] in bruuk. De meystspröäkene språke is [[algerynsk arabisk]].
 
-Algerye is ne halv-presidentiele [[republik]]. Der sint 58 provinsys en 1541 gemeynskappen. In Noordafrika is Algerye nen groutmacht, up et wearldtoneyl van döärsneade bedüding. Et hevt de höygste Menskelike UntwikkelingsIndex van alle kontinentaal-afrikaanske landen en eyne van de grötste [[ekonomie|ekonomyen]] van et wearlddeyl, vöär et grötste deyl te danken an energyuutvoor. Up vyvteen landen nå hevt Algerye de grötste öälyvöärråden van de wearld en de neagendegrötste natuurlike gasbel van de wearld. Sonatrach, et nationale öälybedryv, is et gröätste bedryv van Afrika. See leyveret groute gasvöärråden an [[Europa (wearlddeel)|Europa]]. Algerye hevt eyne van de gröätste leagers in Afrika en et gröätste defensybudget up et wearlddeyl. Et is lid van de [[Afrikaanske Uny]], de [[Arabiske Liga]], [[OPEC]], de [[Vereynigde Natys]]. Et is meduprichter van de arabiske Maghreb-uny.
+Algerye is ne halv-presidentiele [[republik]]. Der sint 58 provincys en 1541 gemeynskappen. In Noordafrika is Algerye nen groutmacht, up et wearldtoneyl van döärsneade bedüding. Et hevt de höygste Menskelike UntwikkelingsIndex van alle kontinentaal-afrikaanske landen en eyne van de grötste [[ekonomie|ekonomyen]] van et wearlddeyl, vöär et grötste deyl te danken an energyuutvoor. Up vyvteen landen nå hevt Algerye de grötste öälyvöärråden van de wearld en de neagendegrötste natuurlike gasbel van de wearld. Sonatrach, et nationale öälybedryv, is et gröätste bedryv van Afrika. See leyveret groute gasvöärråden an [[Europa (wearlddeel)|Europa]]. Algerye hevt eyne van de gröätste leagers in Afrika en et gröätste defensybudget up et wearlddeyl. Et is lid van de [[Afrikaanske Uny]], de [[Arabiske Liga]], [[OPEC]], de [[Vereynigde Natys]]. Et is meduprichter van de arabiske Maghreb-uny.
 
 {{Dialekt|twd||Nysassiske Skryvwyse}}
 
