--- a/Jan_Zandbergen.mw
+++ b/Jan_Zandbergen.mw
@@ -1,6 +1,16 @@
-'''Jan Zandbergen''' ([[1938]]) is nen [[Tweante|Tweantsen]] skriewer oet [[Riesn]]. Hee skrif völle [[limerick (dichtvorm)|Limericks]] in t [[Riessens]] en hef doarmet t eegne oonderdeel ''(s)Limerick'' in t [[Riessens Niejsblad]] en in t kwartaalblad [[Bodbreef|n Bodbreef]] van de [[Kreenk vuur de Twentse sproak|Kreenk vuur de Tweantse sproake]].
+'''Jan Zandbergen''' ([[Riessen]], [[15 juni]] [[1938]] - Riessen, [[16 juni]] [[2021]]) was nen [[Tweante|Tweantsen]] dichter oet [[Riessen]]. Zaandboargen skreef mangs [[Nederlaands]]e, mer benaamd völle [[Riessens]]e [[limerick (dichtvorm)|limericks]], dee as hee zelf ''(s)limericks'' neumden weagens de talige gräpkes dee as der in zatten. Doar deed hee dan ook altied ne verneamstige sprökke bie. Dee stunden alle wekken in et domoalige [[Riessens Niejsblad]] en in et kwartaalblad [[Bodbreef|'n Bodbreef]] van de [[Kreenk vuur de Twentse sproak|Kreenk vuur de Tweantse sproake]]. Do as et Riessens Niejsblad der met oetskeaiden, gung zinne rubriek oawer noar et wekkenblad Hart van Rijssen-Holten.
 
-Nöast zin skriefwoark dut Zandbergen ook met in de [[Revue|Riessense Revue]] en hef he in t verleedn met ehulpn an de Tweantse [[opera]]'s ''Scheerbaas van Riessen'' en ''Tsaar en Timmerman''.
+Nöast zin skriefwoark deed Zandbergen ook met in de [[Revue|Riessense Revue]] en hulp hee met an de Tweantse [[opera]]'s ''Scheerbaas van Riessen'' en ''Tsaar en Timmerman'' van [[Harm oet Riessen]]. In et dagelikse leawen was Zandbergen stukadoor en glaszetter.
+
+In 2017 köm hee nog in et lokale niejs umdat hee 750 slimericks emaakt har.<ref>[https://www.hartvanrijssen.nl/nieuws/algemeen/20379/jan-zandbergen-maakt-de-750-vol hartvanrijssen.nl. 'Jan Zandbergen maakt de 750 vol'. 
+
+Zaandboargen was fanatiek hardleuper bie de lokale atletiekverenige. Töt zinnen twee en tachtigsten hef hee dat aait nog probeerd, zelfs doas hee noa zwoare operaties eagenlik nit mear kon. In 2021 veunden de dokters [[kaanker]] an de alvleeskliere bie em. Op 'n zesteenden juni köm hee oet de tied.
+
+==Oetgawes==
+*(2013) ''(S)Limerick of (S)Limmer-iej?'' - Bundel van limericks - Oetegewen in egen behear
+
+==Oetgoande koppeling==
+* [http://www.twentsetaalbank.nl/details/personen/303.html Zaandboargen zin profiel op de Tweantse Taalbaanke]
 
 {{DEFAULTSORT:Zandbergen, Jan}}
 [[Kategorie: Tweants artikel]]
