*Empty MediaWiki Message*

--- a/Jan_Zandbergen.mw
+++ b/Jan_Zandbergen.mw
@@ -2,7 +2,7 @@
 
 Nöast zin skriefwoark deed Zandbergen ook met in de [[Revue|Riessense Revue]] en hulp hee met an de Tweantse [[opera]]'s ''Scheerbaas van Riessen'' en ''Tsaar en Timmerman'' van [[Harm oet Riessen]]. In et dagelikse leawen was Zandbergen stukadoor en glaszetter.
 
-In 2017 köm hee nog in et lokale niejs umdat hee 750 slimericks emaakt har.<ref>[https://www.hartvanrijssen.nl/nieuws/algemeen/20379/jan-zandbergen-maakt-de-750-vol hartvanrijssen.nl. 'Jan Zandbergen maakt de 750 vol'. 
+In 2017 köm hee nog in et lokale niejs umdat hee 750 slimericks emaakt har.<ref>[https://www.hartvanrijssen.nl/nieuws/algemeen/20379/jan-zandbergen-maakt-de-750-vol hartvanrijssen.nl. 'Jan Zandbergen maakt de 750 vol'. Skreven op 22 oktober 2017. Bekekken op 18 juni 2021.]</ref>
 
 Zaandboargen was fanatiek hardleuper bie de lokale atletiekverenige. Töt zinnen twee en tachtigsten hef hee dat aait nog probeerd, zelfs doas hee noa zwoare operaties eagenlik nit mear kon. In 2021 veunden de dokters [[kaanker]] an de alvleeskliere bie em. Op 'n zesteenden juni köm hee oet de tied.
 
@@ -11,6 +11,8 @@ Zaandboargen was fanatiek hardleuper bie de lokale atletiekverenige. Töt zinnen
 
 ==Oetgoande koppeling==
 * [http://www.twentsetaalbank.nl/details/personen/303.html Zaandboargen zin profiel op de Tweantse Taalbaanke]
+
+<references/>
 
 {{DEFAULTSORT:Zandbergen, Jan}}
 [[Kategorie: Tweants artikel]]
