*Empty MediaWiki Message*

--- a/Jan_Zandbergen.mw
+++ b/Jan_Zandbergen.mw
@@ -1,6 +1,6 @@
-'''Jan Zandbergen''' ([[Riessen]], [[15 juni]] [[1938]] - Riessen, [[16 juni]] [[2021]]) was nen [[Tweante|Tweantsen]] dichter oet [[Riessen]]. Zaandboargen skreef mangs [[Nederlaands]]e, mer benaamd völle [[Riessens]]e [[limerick (dichtvorm)|limericks]], dee as hee zelf ''(s)limericks'' neumden weagens de talige gräpkes dee as der in zatten. Doar deed hee dan ook altied ne verneamstige sprökke bie. Dee stunden alle wekken in et domoalige [[Riessens Niejsblad]] en in et kwartaalblad [[Bodbreef|'n Bodbreef]] van de [[Kreenk vuur de Twentse sproak|Kreenk vuur de Tweantse sproake]]. Do as et Riessens Niejsblad der met oetskeaiden, gung zinne rubriek oawer noar et wekkenblad Hart van Rijssen-Holten.
+'''Jan Zandbergen''' ([[Riessen]], [[15 juni]] [[1938]] - Riessen, [[16 juni]] [[2021]]) was nen [[Tweante|Tweantsen]] dichter oet [[Riessen]]. Zaandboargen skreef mangs [[Nederlaands]]e, mer benaamd völle [[Riessens]]e [[limerick (dichtvorm)|limericks]], dee as hee zelf ''(s)limericks'' neumden weagens de talige gräpkes dee as der in zatten. Doar deed hee dan ook aaltied ne verneamstige sprökke bie. Dee steunden alle wekken in et doomoalige [[Riessens Niejsblad]] en in et kwartaalblad [[Bodbreef|'n Bodbreef]] van de [[Kreenk vuur de Twentse sproak|Kreenk vuur de Tweantse sproake]]. Do as et Riessens Niejsblad der met oetskeaiden, gung zinne rubriek oawer noar et wekkenblad Hart van Rijssen-Holten.
 
-Nöast zin skriefwoark deed Zandbergen ook met in de [[Revue|Riessense Revue]] en hulp hee met an de Tweantse [[opera]]'s ''Scheerbaas van Riessen'' en ''Tsaar en Timmerman'' van [[Harm oet Riessen]]. In et dagelikse leawen was Zandbergen stukadoor en glaszetter.
+Nöast zin skriefwoark deed Zandbergen ook met in de [[Revue|Riessense Revue]] en hulp hee met an de Tweantse [[opera]]'s ''Scheerbaas van Riessen'' en ''Tsaar en Timmerman'' van [[Harm oet Riessen]]. In zien woarkzame leawen deed Zandbergen stukadoren en glaszetten.
 
 In 2017 köm hee nog in et lokale niejs umdat hee 750 slimericks emaakt har.<ref>[https://www.hartvanrijssen.nl/nieuws/algemeen/20379/jan-zandbergen-maakt-de-750-vol hartvanrijssen.nl. 'Jan Zandbergen maakt de 750 vol'. Skreven op 22 oktober 2017. Bekekken op 18 juni 2021.]</ref>
 
