*Empty MediaWiki Message*

--- a/Jan_Zandbergen.mw
+++ b/Jan_Zandbergen.mw
@@ -1,4 +1,6 @@
-'''Jan Zandbergen''' ([[Riessen]], [[15 juni]] [[1938]] - Riessen, [[16 juni]] [[2021]]) was nen [[Tweante|Tweantsen]] dichter oet [[Riessen]]. Zaandboargen skreef mangs [[Nederlaands]]e, mer benaamd völle [[Riessens]]e [[limerick (dichtvorm)|limericks]], dee as hee zelf ''(s)limericks'' neumden weagens de talige gräpkes dee as der in zatten. Doar deed hee dan ook aaltied ne verneamstige sprökke bie. Dee steunden alle wekken in et doomoalige [[Riessens Niejsblad]] en in et kwartaalblad [[Bodbreef|'n Bodbreef]] van de [[Kreenk vuur de Twentse sproak|Kreenk vuur de Tweantse sproake]]. Do as et Riessens Niejsblad der met oetskeaiden, gung zinne rubriek oawer noar et wekkenblad Hart van Rijssen-Holten.
+'''Jan Zandbergen''' ([[Riessen]], [[15 juni]] [[1938]] - Riessen, [[16 juni]] [[2021]]) was nen [[Tweante|Tweantsen]] dichter en skriewer oet [[Riessen]]. Zaandboargen skreef mangs [[Nederlaands]]e, mer benaamd völle [[Riessens]]e [[limerick (dichtvorm)|limericks]], dee as hee zelf ''(s)limericks'' neumden weagens de talige gräpkes dee as der in zatten. Doar deed hee dan ook aaltied ne verneamstige sprökke bie. Dee steunden alle wekken in et doomoalige [[Riessens Niejsblad]] en in et kwartaalblad [[Bodbreef|'n Bodbreef]] van de [[Kreenk vuur de Twentse sproak|Kreenk vuur de Tweantse sproake]]. Do as et Riessens Niejsblad der met oetskeaiden, gung zinne rubriek oawer noar et wekkenblad Hart van Rijssen-Holten.
+
+Van ziene hande zint ook een antal korte verhaalkes bekeand. Disse zint allemoal oetegewen in oetgaves van de Kreenk vuur de Twentse Sproake.
 
 Nöast zin skriefwoark deed Zandbergen ook met in de [[Revue|Riessense Revue]] en hulp hee met an de Tweantse [[opera]]'s ''Scheerbaas van Riessen'' en ''Tsaar en Timmerman'' van [[Harm oet Riessen]]. In zien woarkzame leawen deed Zandbergen stukadoren en glaszetten.
 
