*Empty MediaWiki Message*

--- a/Namibie.mw
+++ b/Namibie.mw
@@ -18,7 +18,6 @@
 | feesdag = [[21 meert|21 määrt]]
 | tld = na | laandcode = NAM | til = 264
 }}
-
 De '''Republik Namibie''' (vrogger bekend as ''Süüdwestafrika'') is en land in süüdwestelik [[Afrika]], an de küst van de [[Atlantische Ozeoan|Atlantiske oceaan]]. Namibie grenst in et noorden an [[Angola]] en [[Zambie]], in et westen an [[Botswana]] en in et süden an [[Zuud-Afrika|Süüdafrika]]. 
 
 Vanaf de late [[19e eeuw|19. eyw]] tot de [[Eerste Wealdkrieg|Eyrste Wearldoorlog]] was et land en [[Duutslaand|düütske]] [[kolony]]. Dårnå stünd Namibie under beheyr van Süüdafrika. Et land is unafhangelik ewörden in et jår [[1990]]. Dårmead is Namibie eyne van de jungste ståten in de wearld. 
@@ -86,6 +85,8 @@ De officiele språke, et engelsk, wördt håst neet döär de bevolking as moder
 
 === Godsdeenst ===
 * Relgy: [[christendom]] 80-90%, dårnåst binnen der noch wat anhangers van traditionele religys en andere religys.
+
+{{Dialekt|wvel||Nysassiske Skryvwyse}}
 
 [[Kategorie:Afrika]]
 [[Kategorie:Laand]]
