--- a/Namibie.mw
+++ b/Namibie.mw
@@ -64,7 +64,7 @@ Namibie hevt veerteen bestüürlike regios:
 == Demografy ==
 === Språken ===
 * Officiele språke: [[engels]]k
-* Nationale språken (alle språken dee döär autochtone namibiers as moderstaal espröäken wörden): 
+* Nationale språken (alle språken dee döär autochtone namibiers as modersspråke espröäken wörden): 
 ** [[afrikaansk]] (tegelyk de [[lingua franca]] tüsken de bevolkingsgruppen)
 ** [[düütsk]]
 ** [[herero]]
@@ -81,7 +81,7 @@ Volgens de volkstelling van 2011 binnen de språken dee et meyst espröäken wö
 * 9% kavangospråken
 * 9% herero
 
-De officiele språke, et engelsk, wördt håst neet döär de bevolking as moderstaal espröäken. Et is vöäral bedoold as neutrale språke tüsken de verskillende bevolkingsgruppen.
+De officiele språke, et engelsk, wördt håst neet döär de bevolking as modersspråke espröäken. Et is vöäral bedoold as neutrale språke tüsken de verskillende bevolkingsgruppen.
 
 === Godsdeenst ===
 * Relgy: [[christendom]] 80-90%, dårnåst binnen der noch wat anhangers van traditionele religys en andere religys.
