exacte jaartallen i.p.v. vage tijdsaanduiding

--- a/Sijpkes.mw
+++ b/Sijpkes.mw
@@ -1,5 +1,5 @@
 [[Bestaand:Omnibus van Sijpkes, lijndienst Buinen-Borger, 1895.jpg|miniatuur|Omnibus van Sijpkes, 1895]]
-'''Sijpkes''' (uutsproak: ''Siepkes'') was eind [[20e ieuw | 20e eeuw]] t greutste parteculiere busbedrief van Noord-Nederlaand.<ref name="ArtikelOvernameOost">[https://www.dekrantvantoen.nl/vw/article.do?v2=true&id=NVHN-19940308-AE0021006&vw=org&lm=sijpkes Sijpkes Reizen neemt Oost over], Nieuwsblad van het Noorden (8 maart 1994).</ref><ref name="ArtikelSnijden">[https://www.dekrantvantoen.nl/vw/article.do?v2=true&id=NVHN-19961127-AE0011006&vw=org&lm=sijpkes Sijpkes moet hard en diep snijden], Nieuwsblad van het Noorden (27 november 1996).</ref> t Bedrief reed in die tied doageleks mit bussen tussen [[Grunnen (stad) | Grunnen]] en [[Schiphol]] (soamenwerken mit [[KLM]]<ref name="ArtikelSchipholbus">[https://www.digibron.nl/search/detail/012df8c9397d9c373a9b721d/schipholbus-is-gat-in-de-markt Schipholbus is gat in de markt], Reformatorisch Dagblad (23 november 1992).</ref><ref name="ArtikelJorritsma">[https://resolver.kb.nl/resolve?urn=ddd:010623235:mpeg21:a0334 Jorritsma wil subsidie voor Schipholbus], Leeuwarder Courant (11 mei 1994).</ref>) en tussen Grunnen en [[Enschede]].<ref name="ArtikelNoordOostExpress">[https://resolver.kb.nl/resolve?urn=ABCDDD:010857251:mpeg21:a0462 Eerste commerciële busdienst gaat gebukt onder kortingen], De Volkskrant (1 juli 1989)</ref><ref name="WikiNoordOostExpress">[https://wiki.ovinnederland.nl/wiki/Lijn_Noord-Oost_Express Lijn Noord-Oost Express], OVinNederland.nl.</ref> Eind [[19e ieuw | 19e]], begun 20e eeuw wer mit omnibussen liendainsten verzörgd in [[Veenkelonie | Grunnegs-Drìntse veenkelonien]].
+'''Sijpkes''' (uutsproak: ''Siepkes'') was eind [[20e ieuw | 20e eeuw]] t greutste parteculiere busbedrief van Noord-Nederlaand.<ref name="ArtikelOvernameOost">[https://www.dekrantvantoen.nl/vw/article.do?v2=true&id=NVHN-19940308-AE0021006&vw=org&lm=sijpkes Sijpkes Reizen neemt Oost over], Nieuwsblad van het Noorden (8 maart 1994).</ref><ref name="ArtikelSnijden">[https://www.dekrantvantoen.nl/vw/article.do?v2=true&id=NVHN-19961127-AE0011006&vw=org&lm=sijpkes Sijpkes moet hard en diep snijden], Nieuwsblad van het Noorden (27 november 1996).</ref> t Bedrief reed in die tied doageleks mit bussen tussen [[Grunnen (stad) | Grunnen]] en [[Schiphol]] (soamenwerken mit [[KLM]]<ref name="ArtikelSchipholbus">[https://www.digibron.nl/search/detail/012df8c9397d9c373a9b721d/schipholbus-is-gat-in-de-markt Schipholbus is gat in de markt], Reformatorisch Dagblad (23 november 1992).</ref><ref name="ArtikelJorritsma">[https://resolver.kb.nl/resolve?urn=ddd:010623235:mpeg21:a0334 Jorritsma wil subsidie voor Schipholbus], Leeuwarder Courant (11 mei 1994).</ref>) en tussen Grunnen en [[Enschede]].<ref name="ArtikelNoordOostExpress">[https://resolver.kb.nl/resolve?urn=ABCDDD:010857251:mpeg21:a0462 Eerste commerciële busdienst gaat gebukt onder kortingen], De Volkskrant (1 juli 1989)</ref><ref name="WikiNoordOostExpress">[https://wiki.ovinnederland.nl/wiki/Lijn_Noord-Oost_Express Lijn Noord-Oost Express], OVinNederland.nl.</ref> Tussen 1895 en 1916 wer mit omnibussen liendainsten verzörgd in [[Veenkelonie | Grunnegs-Drìntse veenkelonien]].
 
 ==Historie==
 [[Bestaand:Sijpkes-210.jpg|miniatuur|n Bus van Sijpkes, Göteborg (Zweden), 1994]]
