*Empty MediaWiki Message*

--- a/Europeeske_Uny.mw
+++ b/Europeeske_Uny.mw
@@ -61,9 +61,9 @@ De volgende landen bint by de EU aneslöäten:
 * [[Cyprus]]
 * [[Slovenië|Slovenie]]
 * [[Kroasië|Kroatie]]
-* [[Hongaarnlaand|Hungarie]]
+* [[Hongaarnlaand|Hungarye]]
 * [[Roemenië|Rumänie]] 
-* [[Bulgarije|Bülgarie]]
+* [[Bulgarije|Bulgarye]]
 |}
 
 <sup>1</sup> sunder [[Gruunlaand|Gröönland]] en de [[Färöer]]<br />
@@ -106,7 +106,7 @@ De officiele talen van de instituten van de Europeeske Uny bint:
 * [[Zweeds|Sweedsk]]
 |}
 
-Med de totreading van [[Bulgarije|Bülgarie]] en [[Roemenië|Rumänie]] vanaf [[1 jannewaori|1 januari]] [[2007]] kwammen [[Bulgaars|bülgaarsk]] en [[Roemeens|rumäänsk]] derby. Ouk kwam der een derde alfabet by, et [[kyrillisk]] (in gebrüük in Bülgarie), nåst et al gebrükede [[Latainse alfabet|latynske]] en [[Griekse alfabet|grykske alfabet]].
+Med de totreading van [[Bulgarije|Bulgarye]] en [[Roemenië|Rumänie]] vanaf [[1 jannewaori|1 januari]] [[2007]] kwammen [[Bulgaars|bülgaarsk]] en [[Roemeens|rumäänsk]] derby. Ouk kwam der een derde alfabet by, et [[kyrillisk]] (in gebrüük in Bulgarye), nåst et al gebrükede [[Latainse alfabet|latynske]] en [[Griekse alfabet|grykske alfabet]].
 
 == Andere EU-talen ==
 Semi-officiele talen in de Europeeske Uny bint:
