*Empty MediaWiki Message*

--- a/Noordmacedonie.mw
+++ b/Noordmacedonie.mw
@@ -18,12 +18,12 @@
 | tld = mk | laandkode = MKD | tel = 389
 }}
 
-'''Noordmacedonie''' (officieel de ''Republik Noordmacedonie'', in et [[Massedonies|macedonisk]]: ''Република Северна Македонија'', [[albanees]]k: ''Republika e Maqedonisë së Veriut''), is een land in de [[Balkan]] in Süüdousteuropa. Et hevt [[Albanië|Albanie]] in et westen, [[Kosovo]] en [[Servië|Servie]] in et noorden, [[Bulgarije|Bulgarie]] in et ousten en [[Griekelaand|Grykenland]] in et süden. Et land hevt sowat 2,1 miljoon inwonners. De höyvdstad is [[Skopje]].
+'''Noordmacedonie''' (officieel de ''Republik Noordmacedonie'', in et [[Massedonies|macedonisk]]: ''Република Северна Македонија'', [[albanees]]k: ''Republika e Maqedonisë së Veriut''), is een land in de [[Balkan]] in Süüdousteuropa. Et hevt [[Albanië|Albanie]] in et westen, [[Kosovo]] en [[Servië|Servie]] in et noorden, [[Bulgarije|Bulgarye]] in et ousten en [[Griekelaand|Grykenland]] in et süden. Et land hevt sowat 2,1 miljoon inwonners. De höyvdstad is [[Skopje]].
 
 Sinds [[12 febrewaori|12 februåri]] [[2019]] het et land officieel ''Noordmacedonie'', vöär dee tyd wördde et land ''Macedonie'' nöömd, of vuluut: de ''Vöärmålige Jugoslaviske Republik Macedonie''  (mangs afekorted med de [[engels]]ke afkörtinge FYROM, ''Former Yugoslav Republic Of Macedonia''). 
 
 == Landsbeskryvinge ==
-* längde landgrensen: 766 km (151 km med Albanie, 148 km med Bulgarie, 246 km med Grykenland en 221 km med Servie)
+* längde landgrensen: 766 km (151 km med Albanie, 148 km med Bulgarye, 246 km med Grykenland en 221 km med Servie)
 * küstlyne: ginne
 * grötste [[rivier|rivyren]]: [[Vardar]]
 * grötste [[mear]]en: [[Doiranmear]], [[Prespamear]], [[Mear van Ohrid]].
