*Empty MediaWiki Message*

--- a/Europeesk_handväst_vöär_streaktalen_of_minderheidstalen.mw
+++ b/Europeesk_handväst_vöär_streaktalen_of_minderheidstalen.mw
@@ -38,7 +38,7 @@ De stand van de bekrachtiging en underteykening up 1 januari 2011 (bron:<ref>[ht
 |- style="background-color:#aaffaa;"
 | [[Ofbeelding:Flag_of_Bosnia_and_Herzegovina.svg|20px|left|Bosnie en Hercegovina]] [[Bosnië-Herzegovina|Bosnie en Hercegovina]] || 07-09-2005 || 21-09-2010 || 01-01-2011 || [[albanees]]k, [[duuts|düütsk]], [[hungaarks]], [[italiaans]]k, [[jiddisj]], [[ladino]], [[macedonisk]], [[montenegrynsk]], [[pools]]k, [[romani]], [[rumäänsk]], [[ruteensk]], [[sloveensk]], [[slowaaksk]], [[tsjechies|tsjechisck]], [[türksk]], [[ukrainsk]]
 |- style="background-color:#ffaaaa;"
-| [[Ofbeelding:Flag_of_Bulgaria.svg|20px|left|Bülgarie]] [[Bulgarije|Bülgarie]] || &nbsp; || &nbsp; || &nbsp; || &nbsp;
+| [[Ofbeelding:Flag_of_Bulgaria.svg|20px|left|Bulgarye]] [[Bulgarije|Bulgarye]] || &nbsp; || &nbsp; || &nbsp; || &nbsp;
 |- style="background-color:#aaffaa;"
 | [[Ofbeelding:Flag_of_Cyprus.svg|20px|left|Cyprus]] [[Cyprus]] || 12-11-1992 || 26-08-2002 || 01-12-2002 || ''[[armeensk]]'', ''[[cypriotisk arabisk]]''
 |- style="background-color:#aaffaa;"
@@ -58,7 +58,7 @@ De stand van de bekrachtiging en underteykening up 1 januari 2011 (bron:<ref>[ht
 |- style="background-color:#ffaaaa;"
 | [[Ofbeelding:Flag_of_Greece.svg|20px|left|Grykenland]] [[Griekenlaand|Grykenland]] || &nbsp; || &nbsp; || &nbsp; || &nbsp;
 |- style="background-color:#aaffaa;"
-| [[Ofbeelding:Flag_of_Hungary.svg|20px|left|Hungarie]] [[Hongaarnlaand|Hungarie]] || 05-11-1992 || 26-04-1995 || 01-03-1998
+| [[Ofbeelding:Flag_of_Hungary.svg|20px|left|Hungarye]] [[Hongaarnlaand|Hungarye]] || 05-11-1992 || 26-04-1995 || 01-03-1998
 | düütsk, [[Krowatisch|kroatisk]], [[rumäänsk]], [[servisk]], [[sloveensk]], [[slowaaksk]]
 |- style="background-color:#ffffaa;"
 | [[Ofbeelding:Flag_of_Italy.svg|20px|left|Italie]] [[Italiën|Italie]] || 27-06-2000 || &nbsp; || &nbsp; || &nbsp;
@@ -110,13 +110,13 @@ De stand van de bekrachtiging en underteykening up 1 januari 2011 (bron:<ref>[ht
 | [[Ofbeelding:Flag_of_Slovenia.svg|20px|left|Slovenie]] [[Slovenië|Slovenie]] || 03-07-1997 || 04-10-2000
 | 01-01-2001 || hungaarsk, italiaansk, romani
 |- style="background-color:#aaffaa;"
-| [[Ofbeelding:Flag_of_Slovakia.svg|20px|left|Slowakie]] [[Slowakije|Slowakie]] || 20-02-2001 || 05-09-2001 || 01-01-2002
+| [[Ofbeelding:Flag_of_Slovakia.svg|20px|left|Slowakye]] [[Slowakije|Slowakye]] || 20-02-2001 || 05-09-2001 || 01-01-2002
 | bülgaarsk, düütsk, hungaarsk, kroatisk, [[pools]]k, romani, ruteensk, tsjechisk, ukrainsk
 |- style="background-color:#aaffaa;"
 | [[Ofbeelding:Flag_of_Spain.svg|20px|left|Spanje]] [[Spanje]] || 05-11-1992 || 09-04-2001 || 01-08-2001
 | [[baskies|baskisk]], [[galicisk]], [[katalaans]]k
 |- style="background-color:#aaffaa;"
-| [[Ofbeelding:Flag_of_Sweden.svg|20px|left|Zweden]] [[Sveden|Sweden]] || 09-02-2000 || 09-02-2000 || 01-06-2000
+| [[Ofbeelding:Flag_of_Sweden.svg|20px|left|Sweden]] [[Sveden|Sweden]] || 09-02-2000 || 09-02-2000 || 01-06-2000
 | [[fins]]k, jiddisj, romani, samisk, [[Meänkieli|tornedalfinsk]]
 |- style="background-color:#aaffaa;"
 | [[Ofbeelding:Flag_of_Switzerland.svg|20px|left|Switserland]] [[Zwitserlaand|Switserland]] || 08-10-1993 || 23-12-1997
@@ -125,7 +125,7 @@ De stand van de bekrachtiging en underteykening up 1 januari 2011 (bron:<ref>[ht
 | [[Ofbeelding:Flag_of_the_Czech_Republic.svg|20px|left|Tsjechie]] [[Tsjechië|Tsjechie]] || 09-11-2000 || 15-11-2006
 | 01-03-2007 || düütsk, poolsk, romani, slowaaksk
 |- style="background-color:#ffaaaa;"
-| [[Ofbeelding:Flag_of_Turkey.svg|20px|left|Türkie]] [[Turkije|Türkie]] || &nbsp; || &nbsp; || &nbsp; || &nbsp;
+| [[Ofbeelding:Flag_of_Turkey.svg|20px|left|Türkye]] [[Turkije|Türkye]] || &nbsp; || &nbsp; || &nbsp; || &nbsp;
 |- style="background-color:#aaffaa;"
 | [[Ofbeelding:Flag_of_Ukraine.svg|20px|left|Ukraine]] [[Oekraïne|Ukraine]] || 02-05-1996 || 19-09-2005 || 01-01-2006 || [[bülgaarsk]], düütsk, [[gagauzisk]], gryksk, hungaarsj, jiddisj, [[krimtataarsk]], [[moldavisk]], poolsk, rumäänsk, russisk, slowaaksk, [[witrussisk]]
 |- style="background-color:#aaffaa;"
