--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -18,7 +18,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Tirana (stad)|Tirana]]
 |[[Albanees]]k: Shqipëria
 |-
-|[[Algerije|Algerye]]
+|[[Algerye]]
 |Demokratiske Volksrepublik Algerye
 |[[Algyrs]]
 |[[Arabies|Arabisk]]: al-Jazāʾir / الجزائر
