*Empty MediaWiki Message*

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -752,7 +752,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 !width=25%|Korte landsname (oorsprungelike taal/talen)
 |-
 |[[Omaan]]
-|Sultanåt Omaan
+|Sultanaat Omaan
 |[[Maskat]]
 |[[Arabies|Arabisk]]: ʿUmān / عُمان
 |-
@@ -1213,12 +1213,6 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |[[Russies|Russisk]]: Donetsk / Донецк
 |0<ref name=oekraine>De [[Volksrepublik Donetsk]] en de [[Volksrepublik Lugansk]] hebben de kontrole oaver een gedeylte van de Ukrainske oblasten [[Oblast Donetsk|Donetsk]] en [[Oblast Luhansk|Luhansk]], mär wörden döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Ukraine]]. De volksrepubliken erkennen mekaars unafhankelikheid en wörden beide vearder enkeld erkend döär Süüdossetie, dat selv ouk neet algemeyn erkend wördt.</ref>
 |-
-|[[Islamitiske Ståt (in Irak en de Levant)|Islamitiske Ståt]]
-|Islamitiske Ståt (IS)
-|[[Raqqa]] (de facto, tot 2017) <br /> [[Mayadin]] (de facto, in 2017) <br /> [[Al-Qá'im (stad)|Al-Qá'im]] (de facto, vanof 2017)
-|[[Arabies|Arabisk]]: al-Dawla al-Islāmiyya / الدولة الإسلامية 
-|0<ref>De Islamitiske Ståt (IS), ouk wel ISIS of Daesh enöömd, is een selv uuteröpen ståt en wördt neet döär de internationale gemeynskap erkend. IS hevt een klein gedeylte van Syrie under kontrole.</ref>
-|-
 |[[Volksrepublik Lugansk|Lugansk]]
 |Volksrepublik Lugansk
 |[[Luhansk|Lugansk]] 
@@ -1304,7 +1298,7 @@ De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[P
 |(Unbewoand)<ref name=Unbewoand />
 |[[Engels]]k<ref name=defacto />: Johnston Atoll
 |-
-|[[Kingman (rif)]]
+|[[Kingman (rif)|Kingman]]
 |[[Neet-ingelyvd territorium|Ungeorganiseerd neet-ingelyvd territorium]]
 |(Unbewoand)<ref name=Unbewoand />
 |[[Engels]]k<ref name=defacto />: Kingman Reef
@@ -1434,7 +1428,7 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |[[Saint Helier]]
 |[[Engels]]k en [[frans]]k: Jersey
 |-
-|[[Kaaymaneilanden]]
+|[[Kaimaneilanden]]
 |[[Britske oaverseyske gebeden|Oaverseysk gebeed]]
 |[[George Town (Kaaimaneilanden)|George Town]]
 |[[Engels]]k: Cayman Islands
@@ -1589,7 +1583,7 @@ Alle [[franske oaverseyske gebeden]] maken integraal underdeyl uut van Frankryk<
 |[[Saint-Pierre (stad)|Saint-Pierre]]
 |[[Frans]]k: Saint-Pierre et Miquelon
 |-
-|[[Sünt-Marten (Franske Antillen)]]
+|[[Sünt-Marten (Franske Antillen)|Sünt-Marten]]
 |[[Franske oaverseyske gebeden|Oaverseyske gemeynskap]]
 |[[Marigot (Sünt-Marten)|Marigot]]
 |[[Frans]]k: Saint-Martin
